<resources>
    <string name="app_name">币池挖矿</string>
    <string name="error_network_unknown_host">找不到服务器,请稍后再试!</string>
    <string name="error_network_connect">连接失败,请稍后再试!</string>
    <string name="error_network_timeout">连接超时,请稍后再试!</string>
    <string name="error_network_not_auth">登录信息过期,请重新登录!</string>
    <string name="error_network_not_permission">你没有权限访问!</string>
    <string name="error_network_not_found">你访问的内容不存在!</string>
    <string name="error_network_server">服务器错误,请稍后再试!</string>
    <string name="error_network_unknown">未知错误,请稍后再试!</string>
    <string name="loading">请稍候...</string>
    <string name="error_response_sign">接口签名错误，请稍后再试！</string>
    <string name="error_response_decrypt">接口解密错误，请稍后再试！</string>
    <string name="empty_data">暂无数据</string>
    <string name="toast_loading_finish">全部数据加载完毕</string>
    <string name="login">登录</string>
    <string name="login_english">LOGIN</string>
    <string name="register_english">REGISTER</string>
    <string name="find_pwd_english">FIND_PASSWORD</string>
    <string name="immediately_login">立即登录</string>
    <string name="login_protocol">登录即同意《隐私政策》</string>
    <string name="register_protocol">注册代表你同意《用户手册》</string>
    <string name="hint_phone">请输入手机号</string>
    <string name="hint_password">请输入密码</string>
    <string name="find_pwd">忘记密码？</string>
    <string name="register_now">注册账号</string>
    <string name="register">注册</string>
    <string name="welcome_login">欢迎登录！</string>
    <string name="welcome_register">欢迎注册！</string>
    <string name="login_copywriting">登录代表你同意《用户协议》</string>
    <string name="hint_request_code">请输入验证码</string>
    <string name="get_request_code">获取验证码</string>
    <string name="input_request_code">输入验证码</string>
    <string name="request_code_to">验证码已发送至</string>
    <string name="find_pwd_title">忘记密码</string>
    <string name="retrieve_password">找回密码</string>
    <string name="next_step">下一步</string>
    <string name="finish">完成</string>
    <string name="register_and_login">注册并登录</string>
    <string name="register_copywriting">注册代表你同意《隐私政策》</string>
    <string name="pwd_confirm">请确认密码</string>
    <string name="set_pwd">设置密码</string>
    <string name="login_by_pwd">密码登录</string>
    <string name="hint_new_password">请输入新密码</string>
    <string name="toast_valid_password">请输入有效密码</string>
    <string name="toast_correct_pwd">请输入正确的手机号码</string>
    <string name="toast_request_code">验证码已经发送，请注意查收</string>
    <string name="toast_number_code">请输入短信验证码</string>
    <string name="register_success">恭喜您，注册成功</string>
    <string name="hint_input_image_code">输入图形验证码</string>
    <string name="confirm">确定</string>
    <string name="toast_incorrect_request_code">验证码格式不正确</string>
    <string name="inconsistent">密码不一致，请重新输入</string>
    <string name="reset_pwd_success">密码重置成功</string>
    <string name="dialog_logout_content">是否退出登录？</string>
    <string name="logout">退出登录</string>
    <string name="dialog_logout">退出</string>
    <string name="dialog_cancel">取消</string>
    <string name="dialog_logout_account_content">确定要注销当前账号吗？</string>
    <string name="dialog_logout_account">立即注销</string>
    <string name="dialog_logout_account_cancel">暂不注销</string>
    <string name="toast_delete_account_success">账户注销成功</string>
    <string name="change_pwd">修改密码</string>
    <string name="delete_account">注销账号</string>
    <string name="txt_delete_account">注销</string>
    <string name="switch_account">切换账号</string>
    <string name="go_register"><![CDATA[注册>]]></string>
    <string name="home_nav_index">首页</string>
    <string name="home_nav_quotes">行情</string>
    <string name="home_nav_community">社区</string>
    <string name="home_nav_me">我的</string>
    <string name="search_hint">请输入搜索内容...</string>
    <string name="toast_search_empty">请输入搜索内容</string>
    <string name="search">搜索</string>
    <string name="home_nav_currency">币种</string>
    <string name="calendar_data">日历数据</string>
    <string name="timely_info_title">实时快讯</string>
    <string name="info_detail">快讯详情</string>
    <string name="industry_situation">行业风云</string>
    <string name="currency_conversion">货币换算</string>
    <string name="currency_rec">币种推荐</string>
    <string name="hotspot_express">热点速递</string>
    <string name="exchange">转换</string>
    <string name="time_market_title_name">名称/编码</string>
    <string name="trading_pair">交易对</string>
    <string name="latest_price">最新价</string>
    <string name="highest_price">最高价</string>
    <string name="quote_change">涨跌幅</string>
    <string name="behavior_footer">com.bc.bit.view.MyFabBehavior</string>
    <string name="behavior_home_page_title">com.bc.bit.view.HomePageTitleBehavior</string>
    <string name="behavior_dynamic_title">com.bc.bit.view.DynamicTitleBehavior</string>
    <string name="personal_center">个人中心</string>
    <string name="more_features">更多功能</string>
    <string name="login_or_register">登录/注册</string>
    <string name="about_us">关于我们</string>
    <string name="help_feedback">反馈</string>
    <string name="clear_cache">清除缓存</string>
    <string name="txt_clear_data_cache">清理数据缓存</string>
    <string name="help_and_feedback">帮助与反馈</string>
    <string name="account_safety">账号安全</string>
    <string name="setting">设置</string>
    <string name="version_update">版本更新</string>
    <string name="latest_version">已是最新</string>
    <string name="txt_account_setting">账号安全设置</string>
    <string name="txt_private_protect">隐私、信息保护</string>
    <string name="txt_sign_service_agreement">签订服务协议</string>
    <string name="txt_help_feedback">帮助与意见反馈</string>
    <string name="txt_version_update_detection">版本更新检测</string>
    <string name="toast_feedback_submit_success">提交成功，感谢您的反馈</string>
    <string name="toast_feedback_submit_empty">提交内容不能为空</string>
    <string name="toast_feedback_submit_phone_empty">联系方式不能为空</string>
    <string name="feedback_submit">提交</string>
    <string name="function_suggestions">功能建议</string>
    <string name="bug">bug</string>
    <string name="other">其他</string>
    <string name="content">内容</string>
    <string name="hint_feedback_copywriting">把你遇到的问题或者更好的建议写在这里</string>
    <string name="contact_information">联系方式</string>
    <string name="contact_info_copywriting">留下你的联系方式</string>
    <string name="no_signature">暂无签名</string>
    <string name="toast_no_cache">暂无缓存</string>
    <string name="browse_footprints">浏览足迹</string>
    <string name="info_center">消息中心</string>
    <string name="feedback">意见反馈</string>
    <string name="questions_and_opinions">问题与意见</string>
    <string name="hint_feedback">把你遇见的问题或者更好的建议写在这里</string>
    <string name="edit_information">编辑资料</string>
    <string name="my_info">个人信息</string>
    <string name="personal_profile">个性简介</string>
    <string name="hint_input_nickname">请输入昵称</string>
    <string name="hint_signature">快来写下你的个性签名，让更多人了解你~</string>
    <string name="save_changes">保存修改</string>
    <string name="personal_information">个人资料</string>
    <string name="hint_nickname_numbers">最多输入8个字</string>
    <string name="head_portrait">头像</string>
    <string name="change_portrait">修改头像</string>
    <string name="nickname">昵称</string>
    <string name="introduce">简介</string>
    <string name="toast_nickname_empty">昵称不能为空</string>
    <string name="toast_nickname_number">昵称最多只能输入8个字</string>
    <string name="change_infor_success">个人信息修改成功</string>
    <string name="take_picture">拍照</string>
    <string name="choose_photo_album">从相册选择</string>
    <string name="cancel">取消</string>
    <string name="my_concerned">我的关注</string>
    <string name="unsubscribe">取消关注</string>
    <string name="concerned">关注</string>
    <string name="toast_unsubscribe_success">取消关注成功</string>
    <string name="toast_subscribe_success">关注成功</string>
    <string name="my_fans">我的粉丝</string>
    <string name="fans">粉丝</string>
    <string name="whether_to_follow">确定不再关注？</string>
    <string name="checked_in">已签到</string>
    <string name="sign_in_explanation">签到说明</string>
    <string name="sign_daily">每日签到</string>
    <string name="sign_in">签到</string>
    <string name="sign_in_now">立即签到</string>
    <string name="sign_in_explain">
        签到说明：\n
        1.以30天为一个签到周期，若中途断签后重新签到，则开始新的周期;\n
        2.每个签到周期获得的金币数会有不同;\n
        3.每日金币奖品数量有限，先到先得，领完即止。
    </string>
    <string name="dynamic">动态</string>
    <string name="dynamic_detail">动态详情</string>
    <string name="all_comment">全部评论</string>
    <string name="toast_concerned_success">关注成功</string>
    <string name="toast_concerned_cancel_success">取消关注成功</string>
    <string name="toast_comment_empty">评论不能为空</string>
    <string name="toast_comment_beyond_count">评论内容不能小于9字</string>
    <string name="toast_comment_success">评论成功</string>
    <string name="followed">已关注</string>
    <string name="concern">+关注</string>
    <string name="send_comment">发送</string>
    <string name="empty_comment">还没人评论，去跟帖吧~</string>
    <string name="all_topic">全部话题</string>
    <string name="hint_comment">说点什么吧(9字及以上)</string>
    <string name="article_detail">文章详情</string>
    <string name="publish_dynamic">发布动态</string>
    <string name="toast_beyond_count">最多只能上传三张照片哦</string>
    <string name="hint_talk_more">说点儿什么吧...</string>
    <string name="toast_publish_success">发布成功</string>
    <string name="toast_talk_about_empty">说说内容不能为空</string>
    <string name="toast_talk_about_beyond_count">说说内容不能小于9字</string>
    <string name="publish">发布</string>
    <string name="privacy_policy_txt">
       币池挖矿尊重并保护所有使用服务用户的个人隐私权。为了给您提供更准确、更有个性化的服务，币池挖矿会按照本隐私权政策的规定使用和披露您的个人信息。除本隐私权政策另有规定外，在未征得您事先许可的情况下，币池挖矿不会将这些信息对外披露或向第三方提供。币池挖矿会不时更新本隐私权政策。 您在同意币池挖矿服务使用协议之时，即视为您已经同意本隐私权政策全部内容。本隐私权政策属于币池挖矿服务使用协议不可分割的一部分。\n\n
       1. 适用范围\n\n
       (a) 在您注册币池挖矿帐号时，您根据币池挖矿要求提供的个人注册信息；\n
       (b) 在您使用币池挖矿网络服务，或访问币池挖矿平台网页时，币池挖矿自动接收并记录的您的浏览器和计算机上的信息，包括但不限于您的IP地址、浏览器的类型、使用的语言、访问日期和时间、软硬件特征信息及您需求的网页记录等数据；\n
       © 币池挖矿通过合法途径从商业伙伴处取得的用户个人数据。\n
       您了解并同意，以下信息不适用本隐私权政策：\n
       (a) 您在使用币池挖矿平台提供的搜索服务时输入的关键字信息；\n
       (b) 币池挖矿收集到的您在币池挖矿发布的有关信息数据，包括但不限于参与活动、成交信息及评价详情；\n
       (c) 违反法律规定或违反币池挖矿规则行为及币池挖矿已对您采取的措施。\n\n
      2. 信息使用\n\n
        (a)币池挖矿不会向任何无关第三方提供、出售、出租、分享或交易您的个人信息，除非事先得到您的许可，或该第三方和币池挖矿（含币池挖矿关联公司）单独或共同为您提供服务，且在该服务结束后，其将被禁止访问包括其以前能够访问的所有这些资料。\n
        (b) 币池挖矿亦不允许任何第三方以任何手段收集、编辑、出售或者无偿传播您的个人信息。任何币池挖矿平台用户如从事上述活动，一经发现，币池挖矿有权立即终止与该用户的服务协议。\n
        (c) 为服务用户的目的，币池挖矿可能通过使用您的个人信息，向您提供您感兴趣的信息，包括但不限于向您发出产品和服务信息，或者与币池挖矿合作伙伴共享信息以便他们向您发送有关其产品和服务的信息（后者需要您的事先同意）。\n\n
      3. 信息披露\n\n
        在如下情况下，币池挖矿将依据您的个人意愿或法律的规定全部或部分的披露您的个人信息：\n
        (a) 经您事先同意，向第三方披露；\n
        (b)为提供您所要求的产品和服务，而必须和第三方分享您的个人信息；\n
        (c) 根据法律的有关规定，或者行政或司法机构的要求，向第三方或者行政、司法机构披露；\n
        (d) 如您出现违反中国有关法律、法规或者币池挖矿服务协议或相关规则的情况，需要向第三方披露；\n
        (e) 如您是适格的知识产权投诉人并已提起投诉，应被投诉人要求，向被投诉人披露，以便双方处理可能的权利纠纷；\n
        (f) 在币池挖矿平台上创建的某一交易中，如交易任何一方履行或部分履行了交易义务并提出信息披露请求的，币池挖矿有权决定向该用户提供其交易对方的联络方式等必要信息，以促成交易的完成或纠纷的解决。\n
        (g) 其它币池挖矿根据法律、法规或者网站政策认为合适的披露。\n\n
     4. 信息存储和交换\n\n
       币池挖矿收集的有关您的信息和资料将保存在币池挖矿及（或）其关联公司的服务器上，这些信息和资料可能传送至您所在国家、地区或币池挖矿收集信息和资料所在地的境外并在境外被访问、存储和展示。\n\n
     5. Cookie的使用\n\n
       (a) 在您未拒绝接受cookies的情况下，币池挖矿会在您的计算机上设定或取用cookies ，以便您能登录或使用依赖于cookies的币池挖矿平台服务或功能。币池挖矿使用cookies可为您提供更加周到的个性化服务，包括推广服务。\n
       (b) 您有权选择接受或拒绝接受cookies。您可以通过修改浏览器设置的方式拒绝接受cookies。但如果您选择拒绝接受cookies，则您可能无法登录或使用依赖于cookies的币池挖矿网络服务或功能。\n
       (c) 通过币池挖矿所设cookies所取得的有关信息，将适用本政策。\n\n
    6. 信息安全\n\n
      (a) 币池挖矿帐号均有安全保护功能，请妥善保管您的用户名及密码信息。币池挖矿将通过对用户密码进行加密等安全措施确保您的信息不丢失，不被滥用和变造。尽管有前述安全措施，但同时也请您注意在信息网络上不存在“完善的安全措施”。\n
     (b) 在使用币池挖矿网络服务进行网上交易时，您不可避免的要向交易对方或潜在的交易对\n\n
    7.本隐私政策的更改\n\n
     (a)如果决定更改隐私政策，我们会在本政策中、本公司网站中以及我们认为适当的位置发布这些更改，以便您了解我们如何收集、使用您的个人信息，哪些人可以访问这些信息，以及在什么情况下我们会透露这些信息。\n
     (b)本公司保留随时修改本政策的权利，因此请经常查看。如对本政策作出重大更改，本公司会通过网站通知的形式告知。
      方披露自己的个人信息，如联络方式或者邮政地址。请您妥善保护自己的个人信息，仅在必要的情形下向他人提供。如您发现自己的个人信息泄密，尤其是okcoin比特币用户名及密码发生泄露，请您立即联络币池挖矿客服，以便币池挖矿采取相应措施。\n\n


    </string>
    <string name="user_agreement">用户协议</string>
    <string name="privacy_policy">隐私政策</string>
</resources>