<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/col_txt_7"
    android:orientation="vertical"
    tools:context=".activity.MyInformationActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp">
        <TextView
            android:id="@+id/tv_info_change_avatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/change_portrait"
            android:textSize="@dimen/ts_15sp"
            android:textColor="@color/col_normal"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="right">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/iv_me_header"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:scaleType="fitXY"
                android:src="@drawable/pic_me_placeholder"
                app:riv_corner_radius="25dp"
                app:riv_oval="true" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_next"
                android:layout_gravity="center"
                android:layout_marginLeft="8dp"/>

        </LinearLayout>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/col_txt_10" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/nickname"
            android:textColor="@color/col_normal"
            android:textSize="@dimen/ts_15sp" />

        <EditText
            android:id="@+id/et_info_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:drawableRight="@drawable/ic_next"
            android:drawablePadding="8dp"
            android:hint="@string/hint_nickname_numbers"
            android:textColorHint="@color/col_txt_2"
            android:textSize="@dimen/ts_14sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/col_txt_10" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="top"
            android:text="@string/personal_profile"
            android:textColor="@color/col_normal"
            android:textSize="@dimen/ts_15sp" />

        <EditText
            android:id="@+id/et_info_signature"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="top"
            android:hint="@string/hint_signature"
            android:textColorHint="@color/col_txt_2"
            android:textSize="@dimen/ts_14sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/col_txt_10" />


    <TextView
        android:id="@+id/btn_save_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="60dp"
        android:layout_marginRight="35dp"
        android:padding="12dp"
        android:background="@drawable/btn_login"
        android:gravity="center"
        android:text="@string/save_changes"
        android:textColor="@color/white"
        android:textSize="@dimen/ts_15sp" />
</LinearLayout>