<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_takehoto_dialog"
        android:orientation="vertical">

        <TextView
            android:id="@+id/takePhoto"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_margin="2dp"
            android:gravity="center"
            android:text="@string/take_picture"
            android:textColor="@color/col_normal"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/col_txt_4"/>

        <TextView
            android:id="@+id/choosePhoto"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_margin="2dp"
            android:gravity="center"
            android:text="@string/choose_photo_album"
            android:textColor="@color/col_normal"
            android:textSize="16sp"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_takehoto_dialog"
        android:layout_marginTop="8dp">

        <TextView
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_margin="2dp"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/col_normal"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>
