<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AboutActivity"
    android:background="@color/col_txt_7"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:background="@color/col_white">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:src="@mipmap/ic_launcher" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/col_theme"
                android:layout_marginTop="10dp"
                android:textSize="@dimen/ts_18sp"/>

            <TextView
                android:id="@+id/tv_current_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/col_theme"
                android:layout_marginTop="5dp"
                android:textSize="@dimen/ts_12sp"/>
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="15dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:background="@color/col_white">
        <LinearLayout
            android:id="@+id/layout_version_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="15dp">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textColor="@color/col_normal"
                android:text="@string/version_update"
                android:textSize="@dimen/ts_14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="5dp"
                android:text="@string/latest_version"
                android:textColor="@color/col_txt_2"
                android:textSize="@dimen/sp_14"
                android:drawableRight="@drawable/ic_next"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:background="@color/col_underline" />
        <LinearLayout
            android:id="@+id/layout_feedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="15dp">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textColor="@color/col_normal"
                android:text="@string/feedback"
                android:textSize="@dimen/ts_14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="5dp"
                android:textSize="@dimen/sp_14"
                android:drawableRight="@drawable/ic_next"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>